--- a/.env
+++ b/.env
@@ -7,11 +7,17 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=121.147.31.222
+DB_HOST=172.30.1.17        
 DB_PORT=3306
-DB_DATABASE=scare
-DB_USERNAME=root
+DB_DATABASE=sensorvalue
+DB_USERNAME=bssoft
 DB_PASSWORD=1q2w3e
+
+ADMIN_ID=admin
+ADMIN_PW=1q2w3e
+
+TEAM_COUNT=[1,2,3,4]
+SEAT_COUNT=[1,2,3,4,5,6,7,8,9,10,11,12,13,14]
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
